force-app/main/default/objects/Application__c/fields/Project_Budget_Cost_per_Person__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_Cost_per_Person__c</fullName>
    <description>The cost per person for the project budget and the proposed population served.</description>
    <formula>Project_Total_Budget__c / NUmber_of_People_Served_Proposed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The cost per person for the project budget and the proposed population served.</inlineHelpText>
    <label>Project Budget Cost per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>