force-app/main/default/objects/Application__c/fields/Project_Total_Administrative_Other_Fund__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Administrative_Other_Fund__c</fullName>
    <label>Project Total Administrative Other Fund</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>