force-app/main/default/objects/Application__c/fields/Project_Total_Administrative_Requested__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Administrative_Requested__c</fullName>
    <inlineHelpText>Project amount requested from Sentara related to Administrative expenses</inlineHelpText>
    <label>Project Total Administrative Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>