force-app/main/default/objects/Application__c/fields/Project_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Budget__c</fullName>
    <label>Project Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>