force-app/main/default/objects/Application__c/fields/Project_Total_Direct_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Direct_Expenses__c</fullName>
    <inlineHelpText>Direct expenses specifically used for the project</inlineHelpText>
    <label>Project Total Direct Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>