force-app/main/default/objects/Application__c/fields/Project_Total_Direct_Other_Fund_Source__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Direct_Other_Fund_Source__c</fullName>
    <label>Project Total Direct Other Fund Source</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>