force-app/main/default/objects/Application__c/fields/Project_Total_Personnel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Personnel_Expenses__c</fullName>
    <inlineHelpText>Direct personnel expenses specific to the project</inlineHelpText>
    <label>Project Total Personnel Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>