force-app/main/default/objects/Application__c/fields/Project_Total_Personnel_Other_Fund_Sourc__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Personnel_Other_Fund_Sourc__c</fullName>
    <label>Project Total Personnel Other Fund Sourc</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>