force-app/main/default/objects/Application__c/fields/Quip_Template_URL__c.field-meta.xml
<CustomField>
    <fullName>Quip_Template_URL__c</fullName>
    <label>Quip Template URL</label>
    <type>Url</type>
</CustomField>