force-app/main/default/objects/Application__c/fields/Rec_Person__c.field-meta.xml
<CustomField>
    <fullName>Rec_Person__c</fullName>
    <formula>Amount_Recommended__c / NUmber_of_People_Served_Proposed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rec/Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>