force-app/main/default/objects/Application__c/fields/Recommendation_Percent_Request__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Percent_Request__c</fullName>
    <formula>Amount_Recommended__c /Amount_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommendation Percent Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>