force-app/main/default/objects/Application__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <inlineHelpText>Add the reason why we are recommending the current amount</inlineHelpText>
    <label>Rationale for Recommendations</label>
    <length>1050</length>
    <type>Html</type>
</CustomField>