force-app/main/default/objects/Application__c/fields/Reports_Required__c.field-meta.xml
<CustomField>
    <fullName>Reports_Required__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The number of interim reports required</description>
    <inlineHelpText>The number of interim reports required</inlineHelpText>
    <label>Reports Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>