force-app/main/default/objects/Application__c/fields/Req_of_Program_Costs__c.field-meta.xml
<CustomField>
    <fullName>Req_of_Program_Costs__c</fullName>
    <label>Req % of Program Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>