force-app/main/default/objects/Application__c/fields/Required_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Required_FollowUp__c</fullName>
    <description>Insert required followup items in a bulleted list and then translate to activities</description>
    <inlineHelpText>Insert required followup items in a bulleted list and then translate to activities</inlineHelpText>
    <label>Required FollowUp</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>