force-app/main/default/objects/Application__c/fields/Revised_Grant_Budget_Received__c.field-meta.xml
<CustomField>
    <fullName>Revised_Grant_Budget_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an organization submits a new budget based on a smaller or larger award amount, it is usually added as an attachment. If this is checked, we need to look for attachments with new budgets</description>
    <inlineHelpText>When an organization submits a new budget based on a smaller or larger award amount, it is usually added as an attachment. If this is checked, we need to look for attachments with new budgets</inlineHelpText>
    <label>Revised Grant Budget Received</label>
    <type>Checkbox</type>
</CustomField>