force-app/main/default/objects/Application__c/fields/Secondary_Grant_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Grant_Category__c</fullName>
    <label>Secondary Grant Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Grant_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access to services</fullName>
            </value>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Behavioral Health Services</fullName>
            </value>
            <value>
                <fullName>Diversity and Inclusion</fullName>
            </value>
            <value>
                <fullName>Emergency Shelter</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Financial Counseling Program</fullName>
            </value>
            <value>
                <fullName>Food and Chronic Disease Management</fullName>
            </value>
            <value>
                <fullName>Food Pharmacy</fullName>
            </value>
            <value>
                <fullName>Health Education &amp; Literacy</fullName>
            </value>
            <value>
                <fullName>Health Equity Programs</fullName>
            </value>
            <value>
                <fullName>Healthy Food Pantry Support</fullName>
            </value>
            <value>
                <fullName>Homelessness prevention</fullName>
            </value>
            <value>
                <fullName>Job Training Programs</fullName>
            </value>
            <value>
                <fullName>Literacy and Awareness</fullName>
            </value>
            <value>
                <fullName>Maternal Health Services</fullName>
            </value>
            <value>
                <fullName>Nutrition Education</fullName>
            </value>
            <value>
                <fullName>Oral Health Services</fullName>
            </value>
            <value>
                <fullName>Other Educational Programs</fullName>
            </value>
            <value>
                <fullName>Permanent Supportive Housing</fullName>
            </value>
            <value>
                <fullName>Prescription Drug Supplies</fullName>
            </value>
            <value>
                <fullName>Preventative services</fullName>
            </value>
            <value>
                <fullName>Primary, Specialty, and Chronic Disease Health Services</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Supportive services</fullName>
            </value>
            <value>
                <fullName>Transitional Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>