force-app/main/default/objects/Application__c/fields/Self_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation__c</fullName>
    <label>Self Evaluation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>