force-app/main/default/objects/Application__c/fields/Sentara_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Sentara_Benefit__c</fullName>
    <label>Sentara Benefit</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>