force-app/main/default/objects/Application__c/fields/Sentara_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sentara_Contact__c</fullName>
    <label>Sentara Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>