force-app/main/default/objects/Application__c/fields/Sentara_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Sentara_Recognition__c</fullName>
    <label>Sentara Recognition</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>