force-app/main/default/objects/Application__c/fields/Sentara_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Sentara_Service_Line__c</fullName>
    <label>Sentara Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Emergency medicine</fullName>
            </value>
            <value>
                <fullName>Hospital medicine</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Infection prevention</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Orthopedic</fullName>
            </value>
            <value>
                <fullName>Surgical services</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Women’s health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>