force-app/main/default/objects/Application__c/fields/Sentara_Speaker_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sentara_Speaker_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For sponsorship applicants to request a Sentara speaker</description>
    <inlineHelpText>For sponsorship applicants to request a Sentara speaker</inlineHelpText>
    <label>Sentara Speaker Requested</label>
    <type>Checkbox</type>
</CustomField>