force-app/main/default/objects/Application__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albemarle</fullName>
            </value>
            <value>
                <fullName>Blue Ridge</fullName>
            </value>
            <value>
                <fullName>Charlottesville</fullName>
            </value>
            <value>
                <fullName>Chesapeake Only</fullName>
            </value>
            <value>
                <fullName>Eastern Shore</fullName>
            </value>
            <value>
                <fullName>Halifax</fullName>
            </value>
            <value>
                <fullName>Hampton Only</fullName>
            </value>
            <value>
                <fullName>Hampton Roads</fullName>
            </value>
            <value>
                <fullName>Harrisonburg</fullName>
            </value>
            <value>
                <fullName>Lower Peninsula</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Newport News Only</fullName>
            </value>
            <value>
                <fullName>Norfolk Only</fullName>
            </value>
            <value>
                <fullName>Northern Virginia</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Portsmouth Only</fullName>
            </value>
            <value>
                <fullName>Richmond</fullName>
            </value>
            <value>
                <fullName>Southside</fullName>
            </value>
            <value>
                <fullName>Statewide</fullName>
            </value>
            <value>
                <fullName>Suffolk Only</fullName>
            </value>
            <value>
                <fullName>System-Wide</fullName>
            </value>
            <value>
                <fullName>Upper Peninsula</fullName>
            </value>
            <value>
                <fullName>Virginia Beach Only</fullName>
            </value>
            <value>
                <fullName>Western Tidewater</fullName>
            </value>
            <value>
                <fullName>Eastern Region</fullName>
            </value>
            <value>
                <fullName>Western Region</fullName>
            </value>
            <value>
                <fullName>North East North Carolina</fullName>
            </value>
            <value>
                <fullName>Rockingham</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>