force-app/main/default/objects/Application__c/fields/Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Provided__c</fullName>
    <label>Services Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Care - Adult</fullName>
            </value>
            <value>
                <fullName>Medical Care - Children</fullName>
            </value>
            <value>
                <fullName>Dental Care - Adult</fullName>
            </value>
            <value>
                <fullName>Dental Care - Children</fullName>
            </value>
            <value>
                <fullName>Mental Health Services</fullName>
            </value>
            <value>
                <fullName>Prescription Drug Dispensary</fullName>
            </value>
            <value>
                <fullName>Maternal Care</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>Other (List)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>