force-app/main/default/objects/Application__c/fields/SFx_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>SFx_Application_ID__c</fullName>
    <externalId>true</externalId>
    <label>SFx_Application_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>