force-app/main/default/objects/Application__c/fields/SFx_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>SFx_RecordTypeName__c</fullName>
    <label>SFx_RecordTypeName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>