force-app/main/default/objects/Application__c/fields/Situational_Factors__c.field-meta.xml
<CustomField>
    <fullName>Situational_Factors__c</fullName>
    <label>Situational Factors</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>