force-app/main/default/objects/Application__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>This is a list of reasons to qualify the status</description>
    <inlineHelpText>Optional-Select the reason that best fits the status</inlineHelpText>
    <label>Application Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved: Awaiting budget approval</fullName>
            </value>
            <value>
                <fullName>Approved: Awaiting funding approval</fullName>
            </value>
            <value>
                <fullName>Approved: Scheduled for next quarter</fullName>
            </value>
            <value>
                <fullName>Approved: Committee</fullName>
            </value>
            <value>
                <fullName>Approved: Executive validation not committee</fullName>
            </value>
            <value>
                <fullName>Denial: Recently funding/pending report</fullName>
            </value>
            <value>
                <fullName>Denial: Not aligned with focus areas/strategy</fullName>
            </value>
            <value>
                <fullName>Denial: Incomplete application or untimely</fullName>
            </value>
            <value>
                <fullName>Denial: Budget/Project scope concerns</fullName>
            </value>
            <value>
                <fullName>Denial: Duplicative proposal</fullName>
            </value>
            <value>
                <fullName>Denial: Committee or Executive denial</fullName>
            </value>
            <value>
                <fullName>Denial: Out of service area</fullName>
            </value>
            <value>
                <fullName>Denial: Forwarded to Hospital/Other entity for funding consideration</fullName>
            </value>
            <value>
                <fullName>Denial: Other</fullName>
            </value>
            <value>
                <fullName>Sentara Sponsorship Approved</fullName>
            </value>
            <value>
                <fullName>Follow-up: Approval request rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>