force-app/main/default/objects/Application__c/fields/Summary_of_Recent_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Recent_Accomplishments__c</fullName>
    <label>Summary of Recent Accomplishments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>