force-app/main/default/objects/Application__c/fields/Summary_of_Unmet_Need__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Unmet_Need__c</fullName>
    <label>Summary of Unmet Need</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>