force-app/main/default/objects/Application__c/fields/T_Shirt__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T-Shirt?</label>
    <type>Checkbox</type>
</CustomField>