force-app/main/default/objects/Application__c/fields/Target_Age__c.field-meta.xml
<CustomField>
    <fullName>Target_Age__c</fullName>
    <label>Target: Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Children Under 12</fullName>
            </value>
            <value>
                <fullName>Teenagers 12-17</fullName>
            </value>
            <value>
                <fullName>Adults 18-64</fullName>
            </value>
            <value>
                <fullName>Seniors 65+</fullName>
            </value>
            <value>
                <fullName>All Ages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>