force-app/main/default/objects/Application__c/fields/Target_Disability_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Disability_Status__c</fullName>
    <label>Target: Disability Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disabled Persons - ADA definition</fullName>
            </value>
            <value>
                <fullName>Other Disabled Persons</fullName>
            </value>
            <value>
                <fullName>Not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>