force-app/main/default/objects/Application__c/fields/Target_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Target_Ethnicity__c</fullName>
    <label>Target: Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>