force-app/main/default/objects/Application__c/fields/Target_Gender__c.field-meta.xml
<CustomField>
    <fullName>Target_Gender__c</fullName>
    <label>Target: Gender</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>