force-app/main/default/objects/Application__c/fields/Target_Population__c.field-meta.xml
<CustomField>
    <fullName>Target_Population__c</fullName>
    <label>Target Population</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>