force-app/main/default/objects/Application__c/fields/Total_Administrative_Budget_to_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Administrative_Budget_to_Actual__c</fullName>
    <formula>Project_Total_Direct_Requested__c / Project_Total_Administrative_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the  line item total project to the actual dollar amount.</inlineHelpText>
    <label>Total Administrative Budget to Actual %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>