force-app/main/default/objects/Application__c/fields/Total_Administrative_Var_Budget_toActual__c.field-meta.xml
<CustomField>
    <fullName>Total_Administrative_Var_Budget_toActual__c</fullName>
    <formula>Project_Total_Administrative_Expenses__c - Project_Total_Administrative_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between to the line item total project and the actual dollar amount.</inlineHelpText>
    <label>Total Administrative Var Budget toActual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>