force-app/main/default/objects/Application__c/fields/Total_Direct_Budget_to_Actual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Budget_to_Actual_Percentage__c</fullName>
    <formula>Project_Total_Direct_Requested__c / Project_Total_Direct_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the line item total project to the actual dollar amount.</inlineHelpText>
    <label>Total Direct Budget to Actual Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>