force-app/main/default/objects/Application__c/fields/Total_Direct_Variance_Budget_to_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Variance_Budget_to_Actual__c</fullName>
    <formula>Project_Total_Direct_Expenses__c  -  Project_Total_Direct_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between to the line item total project and the actual dollar amount.</inlineHelpText>
    <label>Total Direct Variance Budget to Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>