force-app/main/default/objects/Application__c/fields/Total_must_be_100__c.field-meta.xml
<CustomField>
    <fullName>Total_must_be_100__c</fullName>
    <formula>Medicaid__c  +  Medicare__c  +  Private_Insurance__c  +  Uninsured__c  +  Unknown_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total must be 100</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>