force-app/main/default/objects/Application__c/fields/Total_Number_of_Board_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Board_Members__c</fullName>
    <label>Total Number of Board Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>