force-app/main/default/objects/Application__c/fields/Total_Other_Funders_Of_Grant_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Funders_Of_Grant_Budget__c</fullName>
    <formula>Other_Funders_Amount_1__c  +  Other_Funders_Amount_2__c  +  Other_Funders_Amount_3__c  +  Other_Funders_Amount_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Funders Of Grant Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>