force-app/main/default/objects/Application__c/fields/Total_Personnel_Budget_to_Actual_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Personnel_Budget_to_Actual_Percent__c</fullName>
    <formula>Project_Total_Personnel_Requested__c/ Project_Total_Personnel_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Personnel Budget to Actual Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>