force-app/main/default/objects/Application__c/fields/Total_Personnel_Variance_Budget_to_Actua__c.field-meta.xml
<CustomField>
    <fullName>Total_Personnel_Variance_Budget_to_Actua__c</fullName>
    <formula>Project_Total_Personnel_Expenses__c  -  Project_Total_Personnel_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between to the line item total project and the actual dollar amount.</inlineHelpText>
    <label>Total Personnel Variance Budget to Actua</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>