force-app/main/default/objects/Application__c/fields/Total_Population_in_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Population_in_Service_Area__c</fullName>
    <label>Total Population in Service Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>