force-app/main/default/objects/Application__c/fields/Uninsured__c.field-meta.xml
<CustomField>
    <fullName>Uninsured__c</fullName>
    <label>Uninsured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>