force-app/main/default/objects/Application__c/fields/Unknown_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Insurance__c</fullName>
    <label>Unknown Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>