force-app/main/default/objects/Application__c/fields/View_Order__c.field-meta.xml
<CustomField>
    <fullName>View_Order__c</fullName>
    <inlineHelpText>Insert the order number for the applications</inlineHelpText>
    <label>View Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>