force-app/main/default/objects/Application__c/validationRules/Must_go_through_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_go_through_Approval_Process</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($User.LastName=&quot;Livingston&quot; ) &amp;&amp;   ISCHANGED(Application_Status__c) &amp;&amp; ISPICKVAL(Application_Status__c, &quot;Approved&quot;) &amp;&amp;  Bypass_Validation__c = False</errorConditionFormula>
    <errorDisplayField>Application_Status__c</errorDisplayField>
    <errorMessage>Must go through Approval Process</errorMessage>
</ValidationRule>