force-app/main/default/objects/Application__c/validationRules/Total_Must_equal_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Must_equal_to_100</fullName>
    <active>true</active>
    <errorConditionFormula>Total_must_be_100__c  = 100</errorConditionFormula>
    <errorMessage>The Total must be 100</errorMessage>
</ValidationRule>